# numerics-cpp

./: CMakeLists.txt
include/: error.h  functions.h  integrators.h  numerics.h  root_finders.h
src/: lib.cpp
tests/: integral_test.cpp  root_test.cpp
